trying to get the logs working for ui build, adds a makefile

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,3 +8,4 @@ COPY ./requirements.txt /var/www/requirements.txt
 COPY ./app /app
 
 RUN pip install -r /var/www/requirements.txt
+HEALTHCHECK CMD ["wget", "-q", "localhost:80"]
