--- a/ui/spa/Dockerfile
+++ b/ui/spa/Dockerfile
@@ -1,6 +1,7 @@
 FROM node:14.2.0-alpine
 MAINTAINER Josh Guffey <joshua.guffey@gmail.com>
 # RUN apk add --no-cache --virtual .gpy python make g++
+RUN apk --update add curl
 
 ENV SCPATH site
 ENV AP /usr/app
@@ -12,7 +13,10 @@ WORKDIR ${AP}
 COPY ${SCPATH}/ .
 
 RUN npm install && npm run build
+RUN npm install pm2 -g
+HEALTHCHECK --interval=30s CMD ["curl", "localhost:3000"]
 
-USER node
-HEALTHCHECK CMD ["wget", "-q", "localhost:3000"]
-CMD ["npm", "start"]
+CMD [ "pm2-runtime", "npm", "--", "start" ]
+# TODO: Need to finish this, see https://dev.to/reactstockholm/setup-a-next-js-project-with-pm2-nginx-and-yarn-on-ubuntu-18-04-22c9
+## Idea is that we want to run `npm start` in background mode, aka detached, so control is given back to docker.
+RUN echo "OK done"
