still trying to get healthcheck working

--- a/ui/spa/Dockerfile
+++ b/ui/spa/Dockerfile
@@ -1,7 +1,7 @@
-FROM node:14.2.0-alpine
+FROM node:current
 MAINTAINER Josh Guffey <joshua.guffey@gmail.com>
 # RUN apk add --no-cache --virtual .gpy python make g++
-RUN apk --update add curl
+# RUN apk --update add curl
 
 ENV SCPATH site
 ENV AP /usr/app
@@ -13,10 +13,8 @@ WORKDIR ${AP}
 COPY ${SCPATH}/ .
 
 RUN npm install && npm run build
-RUN npm install pm2 -g
-HEALTHCHECK --interval=30s CMD ["curl", "localhost:3000"]
 
-CMD [ "pm2-runtime", "npm", "--", "start" ]
+CMD ["npm", "run", "start"]
+HEALTHCHECK CMD ["wget", "-q", "localhost:80"]
 # TODO: Need to finish this, see https://dev.to/reactstockholm/setup-a-next-js-project-with-pm2-nginx-and-yarn-on-ubuntu-18-04-22c9
 ## Idea is that we want to run `npm start` in background mode, aka detached, so control is given back to docker.
-RUN echo "OK done"
