got healthcheck working, finally

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,4 +8,4 @@ COPY ./requirements.txt /var/www/requirements.txt
 COPY ./app /app
 
 RUN pip install -r /var/www/requirements.txt
-HEALTHCHECK CMD ["wget", "-q", "localhost:80"]
+HEALTHCHECK CMD wget -q --tries=1 --spider http://localhost || exit 1
