--- a/ui/spa/Dockerfile
+++ b/ui/spa/Dockerfile
@@ -14,7 +14,5 @@ COPY ${SCPATH}/ .
 
 RUN npm install && npm run build
 
-CMD ["npm", "run", "start"]
-HEALTHCHECK CMD ["wget", "-q", "localhost:80"]
-# TODO: Need to finish this, see https://dev.to/reactstockholm/setup-a-next-js-project-with-pm2-nginx-and-yarn-on-ubuntu-18-04-22c9
-## Idea is that we want to run `npm start` in background mode, aka detached, so control is given back to docker.
+CMD ["npm", "run", "server"]
+HEALTHCHECK CMD wget -q --tries=1 --spider http://localhost:3000 || exit 1
