--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,4 +8,6 @@ COPY ./requirements.txt /var/www/requirements.txt
 COPY ./app /app
 
 RUN pip install -r /var/www/requirements.txt
+EXPOSE 80
+ENV VIRTUAL_HOST dev.app.local
 HEALTHCHECK CMD wget -q --tries=1 --spider http://localhost || exit 1
