DNS Service, testing connections, Healthchecks
- Added a DNS Server that allows the developer to emulate a deployed environment
- Added a /status page to UI App that tests connection to Marketing and API sites
- Health Check is now working

--- a/ui/spa/Dockerfile
+++ b/ui/spa/Dockerfile
@@ -12,7 +12,8 @@ WORKDIR ${AP}
 # Breaks here, no package.json exists!
 COPY ${SCPATH}/ .
 
-RUN npm install && npm run build
+RUN npm install
+RUN npm run build
 
 CMD ["npm", "run", "server"]
 ENV VIRTUAL_HOST dev.app.local
