--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -1,5 +1,6 @@
 version: '3'
 services:
+  # APPS
   marketing:
     build:
       context: ../ui/marketing
@@ -21,7 +22,6 @@ services:
     environment:
       - VIRTUAL_PORT=3000
       - VIRTUAL_HOST=dev.app.local
-  # db:
   server:
     build:
       context: ../backend
@@ -32,14 +32,26 @@ services:
     environment:
       - VIRTUAL_PORT=80
       - VIRTUAL_HOST=api.app.local
+  # SERVICES
   dns:
+    # See services/dns/README.md
     image: jwilder/nginx-proxy
     volumes:
+      # I don't really understand this
       - /var/run/docker.sock:/tmp/docker.sock:ro
     ports:
       - 80:80
     networks:
       - enterprise
+  db:
+    build:
+      context: ../services/db
+    networks:
+      - enterprise
+    volumes:
+      - ../services/db/postgres:/var/lib/postgresql/data
+    ports:
+      - 5432:5432
   # TODO: Tools will actually corrospond 1:1 with services here.
   # TODO(cont.): For example, a message bus would be a standalone service.
 networks:
