--- a/ui/marketing/nginx/conf.d/default.conf
+++ b/ui/marketing/nginx/conf.d/default.conf
@@ -5,6 +5,16 @@ server {
     charset utf-8;
 
     location / {
+        set $cors "";
+        if ($http_origin ~* (\.app\.local)) {
+          set $cors "true";
+        }
+
+        add_header 'Access-Control-Allow-Origin' "$http_origin";
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
+        add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range';
+
         root   /usr/share/nginx/html;
         index  index.html index.htm;
     }
@@ -13,6 +23,7 @@ server {
 
     # redirect server error pages to the static page /50x.html
     error_page   500 502 503 504  /50x.html;
+    
     location = /50x.html {
         root   /usr/share/nginx/html;
     }
