remove flask files
Signed-off-by: Josh Guffey <joshua.guffey@gmail.com>

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,14 +1,18 @@
-FROM tiangolo/uwsgi-nginx-flask:python3.6
+FROM python:3
+
+ENV PYTHONUNBUFFERED 1
+RUN mkdir /code
+WORKDIR /code
+COPY requirements.txt /code/
 
 # RUN apk --update add bash nano
-RUN apt-get update && apt-get install -y vim-tiny
+# RUN apt-get update && apt-get install -y vim-tiny
 
 ENV STATIC_URL /static
 ENV STATIC_PATH /app/core/static
-COPY ./requirements.txt /var/www/requirements.txt
-RUN pip install -r /var/www/requirements.txt
 
-COPY ./app /app
+RUN pip install -r requirements.txt
+COPY ./app /code/
 EXPOSE 80
 ENV VIRTUAL_HOST dev.app.local
 HEALTHCHECK CMD wget -q --tries=1 --spider http://localhost || exit 1
