got django working

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -13,8 +13,7 @@ ENV STATIC_URL /static
 ENV STATIC_PATH /app/core/static
 
 RUN pip install -r requirements.txt
-COPY ./app /code/
+COPY ./code /code/
 EXPOSE 80
 ENV VIRTUAL_HOST dev.app.local
 HEALTHCHECK CMD wget -q --tries=1 --spider http://localhost || exit 1
-CMD python manage.py runserver 0.0.0.0:8000
