--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -28,16 +28,17 @@ services:
     build:
       context: ../backend
     ports:
-      - 8001:80
+      - 8001:8000
     networks:
       - enterprise
     environment:
       - VIRTUAL_PORT=80
       - VIRTUAL_HOST=api.app.local
     volumes:
-      - ../backend/app:/app
-    depends_on: 
+      - ../backend/code:/code
+    depends_on:
       - db
+    command: python /code/manage.py runserver 0.0.0.0:8000
   # SERVICES
   dns:
     # See services/dns/README.md
