--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,2 +1,7 @@
-Django>=3.0,<4.0
-psycopg2-binary>=2.8
+asgiref==3.2.10
+Django==3.1
+django-cors-headers==3.4.0
+django-extensions==3.0.5
+psycopg2-binary==2.8.5
+pytz==2020.1
+sqlparse==0.3.1
