--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,5 +3,6 @@ Django==3.1
 django-cors-headers==3.4.0
 django-extensions==3.0.5
 psycopg2-binary==2.8.5
+python-decouple==3.3
 pytz==2020.1
 sqlparse==0.3.1
